Fix icon alignment in toolbar

--- a/app/components/study/prompt/toolbar-vocab/StudyPromptToolbarVocabComponent.scss
+++ b/app/components/study/prompt/toolbar-vocab/StudyPromptToolbarVocabComponent.scss
@@ -4,6 +4,7 @@ gelato-component[data-name="study-prompt-toolbar-vocab"] {
   position: absolute;
   right: 30px;
   z-index: 1000;
+  text-align: right;
 
   i {
     cursor: pointer;
